# vizier

./: .dockerignore  .gitignore  AGENT.md  AGENTS.md  BOOT.md  CHANGELOG.md  Cargo.toml  Cross.toml  DOCKERHUB.md  Dockerfile  IDENT.md  Justfile  Readme.md  USER.md  build.rs  docker-compose.yaml  docker-entrypoint.sh  install.sh  package-lock.json  vizier.agent.md
.github/workflows/: docker-publish.yml  publish.yml  release-and-publish.yml  release.yml
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/configuration/: agents.md  channels.md  cli.md  index.md  main-config.md  mcp.md  providers.md  skills.md  storage-shell.md  tools-embedding.md
docs/src/getting-started/: installation.md  quick-start.md
installer/windows/: installer.nsi
skills/calculator/: SKILL.md
skills/code-review/: SKILL.md
skills/code-review/resources/: review-template.md
skills/designer/: SKILL.md
skills/skill-maker/: SKILL.md
src/: constant.rs  dependencies.rs  error.rs  global_resources.rs  main.rs  provider_keys.rs  transport.rs
src/agent/: exec.rs  memory.rs  mod.rs
src/agent/agent/: mod.rs  provider.rs
src/agent/agent_impl/: mod.rs  provider.rs
src/agent/agent_impl/system_prompt/: boot.rs  mod.rs  user.rs
src/agent/hook/: history.rs  mod.rs  thinking.rs
src/agent/tools/: mod.rs
src/agent/tools/brave_search/: mod.rs
src/agent/tools/document/: mod.rs
src/agent/tools/python/: docs.rs  mod.rs  ptc.rs
src/agent/tools/scheduler/: mod.rs
src/agent/tools/vector_memory/: mod.rs
src/agent/tools/workspace/: mod.rs
src/agents/: memory_ops.rs  mod.rs  process.rs
src/agents/agent/: image_processor.rs  mod.rs
src/agents/agent/model/: mod.rs  provider.rs  registry.rs
src/agents/agent/system_prompt/: boot.rs  mod.rs  user.rs
src/agents/context_files/: extract.rs  mod.rs
src/agents/hook/: debug.rs  handover.rs  history.rs  mod.rs  thinking.rs  tool_calls.rs
src/agents/mcp/: mod.rs
src/agents/shell/: mod.rs
src/agents/shell/docker/: mod.rs
src/agents/shell/local/: mod.rs
src/agents/skill/: mod.rs
src/agents/tools/: mod.rs
src/channels/: mod.rs  reaction_store.rs
src/channels/discord/: mod.rs
src/channels/http/: mod.rs  state.rs
src/channels/socket/: mod.rs
src/channels/telegram/: mod.rs
src/cli/: agent.rs  init.rs  mod.rs  onboard.rs  run.rs  shutdown.rs  skill.rs
src/cli/tui/: mod.rs  placeholder_edit_view.rs
src/command/: mod.rs
src/config/: agent.rs  embedding.rs  mod.rs  provider.rs  shell.rs  storage.rs  user.rs
src/config/tools/: mcp.rs  mod.rs
src/database/: memory.rs  mod.rs  task.rs
src/database/schema/: mod.rs
src/embedding/: cohere.rs  copilot.rs  fastembed.rs  gemini.rs  mistral.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs  together.rs  voyageai.rs
src/file_manager/: mod.rs
src/image_generation/: huggingface.rs  hyperbolic.rs  mod.rs  openai.rs  xai.rs
src/indexed_document/: mod.rs
src/indexer/: mod.rs  sqlite.rs  surreal.rs
src/mcp/: mod.rs
src/scheduler/: mod.rs
src/scheduler/dream/: mod.rs  prompts.rs
src/schema/: agent.rs  commands.rs  context_file.rs  dream_journal.rs  file.rs  global_config.rs  history.rs  metrics.rs  mod.rs  provider.rs  request.rs  response.rs  session.rs  session_file.rs  storage.rs  task.rs
src/shell/docker/: mod.rs
src/shell/local/: mod.rs
src/skill/: context.rs  install.rs  mod.rs
src/storage/: agent.rs  context_file.rs  dream.rs  dream_journal.rs  global_config.rs  history.rs  memory.rs  mod.rs  provider.rs  rerank.rs  session.rs  session_file.rs  state.rs  task.rs  user.rs
src/storage/fs/: agent.rs  context_file.rs  dream_journal.rs  global_config.rs  history.rs  memory.rs  mod.rs  provider.rs  session.rs  session_file.rs  shared_document.rs  skill.rs  state.rs  task.rs  user.rs
src/storage/indexer/: inmem.rs  mod.rs  surreal.rs
src/storage/sqlite/: agent.rs  dream_journal.rs  global_config.rs  history.rs  memory.rs  mod.rs  provider.rs  session.rs  session_file.rs  state.rs  task.rs  user.rs
src/storage/surreal/: agent.rs  context_file.rs  dream_journal.rs  global_config.rs  history.rs  memory.rs  mod.rs  provider.rs  session.rs  session_file.rs  shared_document.rs  state.rs  task.rs  user.rs
src/stt/: elevenlabs.rs  gemini.rs  groq.rs  huggingface.rs  mistral.rs  mod.rs  openai.rs  sense_voice.rs  whisper.rs
src/tts/: elevenlabs.rs  hyperbolic.rs  kitten.rs  kokoro.rs  mod.rs  openai.rs  openrouter.rs  piper.rs  xai.rs
src/utils/: discord.rs  kitten.rs  kokoro.rs  logo.rs  markdown.rs  mistralrs.rs  mod.rs  ollama.rs  piper.rs  python.rs  sense_voice.rs  tar.rs  telegram.rs
templates/: AGENT.md  IDENT.md  IDENTITY.md  SOUL.md  agent.template.md
vizier-derive/: Cargo.toml
vizier-derive/src/: lib.rs
webui/: README.md  package-lock.json  package.json  vite.config.ts
webui/app/: app.css  layout.tsx  root.tsx  routes.ts
webui/app/components/: AgentCard.tsx  AgentForm.tsx  AttachmentChip.tsx  AttachmentPreviewModal.tsx  AvatarCropModal.tsx  CheckpointDivider.tsx  CustomSelect.tsx  DatePicker.tsx  EmbeddingIndexerSection.tsx  EmojiPickerPopup.tsx  MarkdownEditor.tsx  MemoryGraph.tsx  MemorySearch.tsx  MessageItem.tsx  ModelSelect.tsx  ReactionBadges.tsx  ReactionBar.tsx  RolesSection.tsx  Skeleton.tsx  SlideOver.tsx  ThemeToggle.tsx  ThinkingIndicator.tsx  Toast.tsx  TooltipLabel.tsx  UsageBarChart.tsx  UsersSection.tsx  VoiceMessagePlayer.tsx  avatar.tsx  chat_bubble.tsx  editor.tsx
webui/app/hooks/: agentStore.tsx  connectionStore.tsx  memoryStore.tsx  quickChatStore.tsx  sidebarStore.tsx  skillStore.tsx  themeStore.tsx  toastStore.tsx  useFileAttachments.ts  userStore.tsx
webui/app/interfaces/: chat.ts  types.ts
webui/app/routes/: agent-dream.tsx  agent-edit.tsx  agent-new.tsx  agent-settings.tsx  chat.tsx  chats.tsx  danger.tsx  documents.tsx  home.tsx  login.tsx  memory.tsx  newAgent.tsx  onboarding.tsx  settings.tsx  settingsRoot.tsx  skills.tsx  tasks.tsx  usage.tsx
webui/app/services/: vizier.tsx
webui/app/styles/: checkpoint.css
webui/app/utils/: audio.ts  auth.ts  debounce.ts  exportPdf.ts
(+55 files in other folders)
