[package]
name = "vizier-ai"
version = "0.1.4"
edition = "2024"
authors = ["Ganesha Danu <hi@blinfoldking.dev>"]
description = "21st Century Digital Steward; Right hand agent for you majesty"
license = "MIT"
readme = "Readme.md"
repository = "https://github.com/blinfoldking/vizier"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
anyhow = "1.0.100"
chrono = "0.4.43"
clap = { version = "4.5.57", features = ["derive"] }
config = "0.15.19"
dirs = "6.0.0"
flume = "0.12.0"
form_urlencoded = "1.2.2"
futures = "0.3.31"
log = "0.4.29"
pretty_env_logger = "0.5.0"
regex = "1.12.3"
reqwest = "0.13.2"
rig-core = { version = "0.31.0", features = ["derive"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"
serde_yaml = "0.9.34"
serenity = "0.12.5"
slugify = "0.1.0"
strum = "0.27.2"
text-splitter = { version = "0.29.3", features = ["markdown"] }
tokio = { version = "1.49.0", features = [
  "rt-multi-thread",
  "macros",
  "signal",
] }
uuid = { version = "1.21.0", features = ["serde", "v4"] }
duration-string = { version = "0.5.3", features = ["serde"] }
inquire = { version = "0.9.3", features = ["chrono"] }
tokio-tungstenite = "0.26.0"
tungstenite = "0.28.0"
cursive = "0.21.1"
nanoid = "0.4.0"
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
rust-embed = "8.11.0"
mime_guess = "2.0.5"
surrealdb = { version = "2.6.2", features = ["kv-rocksdb"] }
surrealdb-types = "3.0.1"
rig-surrealdb = "0.1.29"
fastembed = "4.9.1"
