[package]
name = "vizier"
version = "0.2.3"
edition = "2024"
authors = ["Ganesha Danu <hi@blinfoldking.dev>"]
description = "21st Century Digital Steward; Right hand agent for you majesty"
license = "MIT"
readme = "Readme.md"
repository = "https://github.com/vizier-lab/vizier"
include = [
  "/src/**/*",
  "/build.rs",
  "/Cargo.toml",
  "/Readme.md",
  "/templates/**/*",
  # Pre-built webui files (run 'npm run build' in webui/ before publishing)
  "/webui/build/client/**/*",
]
keywords = ["ai", "cli", "agent"]

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
axum = { version = "0.8.8", features = ["ws"] }
anyhow = "1.0.100"
clap = { version = "4.5.57", features = ["derive"] }
config = "0.15.19"
dirs = "6.0.0"
flume = "0.12.0"
form_urlencoded = "1.2.2"
futures = "0.3.31"
log = "0.4.29"
pretty_env_logger = "0.5.0"
regex = "1.12.3"
reqwest = "0.13.2"
rig-core = { version = "0.33.0", features = ["derive"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"
serde_yaml = "0.9.34"
serenity = "0.12.5"
slugify = "0.1.0"
strum = "0.27.2"
text-splitter = { version = "0.29.3", features = ["markdown"] }
tokio = { version = "1.49.0", features = [
  "rt-multi-thread",
  "macros",
  "signal",
  "net",
] }
uuid = { version = "1.21.0", features = ["serde", "v4"] }
duration-string = { version = "0.5.3", features = ["serde"] }
inquire = { version = "0.9.3", features = ["chrono"] }
tokio-tungstenite = "0.26.0"
tungstenite = "0.28.0"
nanoid = "0.4.0"
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
rust-embed = "8.11.0"
mime_guess = "2.0.5"
surrealdb = { version = "3.0.1", features = ["kv-rocksdb"] }
surrealdb-types = "3.0.1"
fastembed = "4.9.1"
croner = { version = "3.0.1", features = ["serde"] }
indicatif = "0.17.11"
rand = "0.10.0"
pyo3 = { version = "0.28.2", features = [
  "auto-initialize",
  "abi3-py39",
], optional = true }
pythonize = { version = "0.28", optional = true }
dotenvy = "0.15.7"
async-trait = "0.1.89"
async-broadcast = "0.7.2"
termimad = "0.34.1"
glob = "0.3.3"
shellexpand = "3.1.2"
bollard = { version = "0.20.2", features = ["buildkit", "chrono"] }

[build-dependencies]
pyo3-build-config = { version = "0.28.2", optional = true }

[features]
default = []
python = ["pyo3", "pythonize", "pyo3-build-config"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/vizier-v{ version }-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "vizier-v{ version }-{ target }/{ bin }"
