[package]
name = "vizier"
version = "0.5.3"
edition = "2024"
authors = ["Ganesha Danu <hi@blinfoldking.dev>"]
description = "21st Century Digital Steward; Right hand agent for you majesty"
license = "MIT"
readme = "Readme.md"
repository = "https://github.com/vizier-lab/vizier"
include = [
  "/src/**/*",
  "/build.rs",
  "/Cargo.toml",
  "/Readme.md",
  "/templates/**/*",
  # Pre-built webui files (run 'npm run build' in webui/ before publishing)
  "/webui/build/client/**/*",
]
keywords = ["ai", "cli", "agent"]

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
axum = { version = "0.8.8", features = ["ws"] }
axum-extra = { version = "0.12.6", features = ["multipart"] }
anyhow = "1.0.100"
clap = { version = "4.5.57", features = ["derive"] }
config = "0.15.19"
dirs = "6.0.0"
flume = "0.12.0"
form_urlencoded = "1.2.2"
futures = "0.3.31"
log = "0.4.29"
pretty_env_logger = "0.5.0"
regex = "1.12.3"
reqwest = "0.13.2"
rig-core = { version = "0.33.0", features = ["derive", "rmcp"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"
serde_yaml = "0.9.34"
serenity = "0.12.5"
teloxide = "0.14"
slugify = "0.1.0"
strum = "0.27.2"
text-splitter = { version = "0.29.3", features = ["markdown"] }
tokio = { version = "1.49.0", features = [
  "rt-multi-thread",
  "macros",
  "signal",
  "net",
] }
uuid = { version = "1.21.0", features = ["serde", "v4"] }
duration-string = { version = "0.5.3", features = ["serde"] }
inquire = { version = "0.9.3", features = ["chrono"] }
tokio-tungstenite = "0.26.0"
tungstenite = "0.28.0"
nanoid = "0.4.0"
jsonwebtoken = "9"
argon2 = "0.5"
base64 = "0.22"
sha2 = "0.10"
tower-http = { version = "0.6.8", features = ["cors", "fs", "limit"] }
rust-embed = "8.11.0"
mime_guess = "2.0.5"
surrealdb = { version = "3.0.1", features = ["kv-rocksdb"] }
surrealdb-types = "3.0.1"
fastembed = "4.9.1"
croner = { version = "3.0.1", features = ["serde"] }
indicatif = "0.17.11"
rand = "0.10.0"

dotenvy = "0.15.7"
async-trait = "0.1.89"
async-broadcast = "0.7.2"
termimad = "0.34.1"
utoipa = { version = "5", features = ["chrono"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum"] }
glob = "0.3.3"
tar = "0.4"
shellexpand = "3.1.2"
bollard = { version = "0.20.2", features = ["buildkit", "chrono"] }
rmcp = { version = "1.3.0", features = [
  "client",
  "macros",
  "transport-child-process",
  "transport-streamable-http-client-reqwest",
  "transport-streamable-http-server",
] }
rustpython-vm = { version = "0.4.0", features = ["serde"] }
rustpython = "0.4.0"
html2md = "0.2.15"

[features]
default = []

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/vizier-v{ version }-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "vizier-v{ version }-{ target }/{ bin }"
