[package]
name = "vizier-derive"
version = "0.10.7"
edition = "2021"
description = "Derive macros for vizier"
license = "MIT"
repository = "https://github.com/vizier-lab/vizier"
homepage = "https://github.com/vizier-lab/vizier"
keywords = ["vizier", "derive", "proc-macro", "markdown"]
categories = ["development-tools::procedural-macro-helpers"]
readme = false

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
